--- a/public/tripsPage.html
+++ b/public/tripsPage.html
@@ -8,6 +8,13 @@
     <script src="index.js"></script>
   </head>
   <body>
+    <nav>
+      <ul id="">
+        <li><a class="active1" href="#">REGISTER</a></li>
+        <li><a class="nonactive1" href="./login.html">LOG IN</a></li>
+        <li><a class="nonactive1" href="./tripsPage.html">TRIPS PAGE</a></li>
+      </ul>
+    </nav>
     <div>
         <h1>TRIP PAGE</h1>
         <h2>Create a trip now!</h2>
