--- a/public/registration.html
+++ b/public/registration.html
@@ -5,19 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Address Form</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="index.js"></script>
   </head>
   <body>
-    <fieldset>
-        <legend>LOG IN</legend>
-        <h2>Please enter your username and password to log in!</h2><br>
+    <nav>
+      <ul id="">
+        <li><a href="/">REGISTER</a></li>
+        <li><a href="./login.html">LOG IN</a></li>
+        <li><a href="./tripsPage.html">TRIPS PAGE</a></li>
+      </ul>
+    </nav>
+    <form id="registration">
+        <legend>Registration form:</legend>
+        <h2>Please enter a username and a password to make the registration!</h2><br>
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username" placeholder="Enter your username..." required>
         <label for="password">Password:</label><br>
         <input type="text" id="password" name="password" placeholder="Enter your password..." required>
         <br>
-        <button type="submit" name="submit">LOG IN</button>
-    </fieldset>
+        <p>Your password must contain <strong>at least</strong> a number and a symbol!</p>
+        <br>
+        <button type="submit" name="submit">REGISTER</button>
+    </form>
 
+    <script src="registration.js"></script>
   </body>
 </html>
