--- a/public/login.html
+++ b/public/login.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Address Form</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <script src="index.js"></script>
   </head>
   <body>
     <nav>
@@ -15,7 +14,7 @@
         <li><a class="nonactive1" href="./tripsPage.html">TRIPS PAGE</a></li>
       </ul>
     </nav>
-    <fieldset>
+    <form>
         <legend>LOG IN</legend>
         <h2>Please enter your username and password to log in!</h2><br>
         <label for="username">Username:</label><br>
@@ -24,7 +23,7 @@
         <input type="text" id="password" name="password" placeholder="Enter your password..." required>
         <br>
         <button type="submit" name="submit">LOG IN</button>
-    </fieldset>
-
+    </form>
+    <script src="login.js"></script>
   </body>
 </html>
