--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Address Form</title>
+    <title>Registration</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/sign-up.css">
   </head>
   <body>
     <nav>
-      <ul id="">
+      <ul id="menu">
         <li><a href="/">REGISTER</a></li>
-        <li><a href="./login.html">LOG IN</a></li>
+        <li><a href="./log-in.html">LOG IN</a></li>
         <li><a href="./tripsPage.html">TRIPS PAGE</a></li>
       </ul>
     </nav>
+    <br>
     <form id="registration">
         <legend>Registration form:</legend>
         <h2>Please enter a username and a password to make the registration!</h2><br>
         <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username" placeholder="Enter your username..." required>
+        <input type="text" id="username" name="username" placeholder="Enter your username..." required><br><br>
         <label for="password">Password:</label><br>
         <input type="text" id="password" name="password" placeholder="Enter your password..." required>
         <br>
