--- a/public/tripsPage.html
+++ b/public/tripsPage.html
@@ -26,10 +26,10 @@
             <input type="destination" name="destination" placeholder="Select a destination">
 
             <label>Days</label>
-            <input type="days" name="days" placeholder="Select the number of days">
+            <input type="number" name="days" placeholder="Select the number of days">
 
             <label>Rating</label>
-            <input type="rating" name="rating" placeholder="Rating">
+            <input type="number" name="rating" placeholder="Rating">
 
             <button type="submit" name="submit">Create trip!</button>
         </form>
