--- a/public/log-in.html
+++ b/public/log-in.html
@@ -16,7 +16,7 @@
       </ul>
     </nav>
     <form id="login">
-        <legend>LOG IN</legend>
+        <h1>LOG IN</h1>
         <h2>Please enter your username and password to log in!</h2><br>
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username" placeholder="Enter your username..." required><br><br>
