--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -17,7 +17,7 @@
     </nav>
     <br>
     <form id="registration">
-        <legend>Registration form:</legend>
+        <h1>Registration form:</h1>
         <h2>Please enter a username and a password to make the registration!</h2><br>
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username" placeholder="Enter your username..." minlength="5" maxlength="12"  required><br><br>
