--- a/public/tripsPage.html
+++ b/public/tripsPage.html
@@ -23,7 +23,7 @@
             <input type="date" name="date" placeholder="Select a date">
 
             <label>Vacation</label>
-            <input type="text" name="Vacation" placeholder="Select a destination">
+            <input type="text" name="vacation" placeholder="Select a Vacation">
 
             <label>Days</label>
             <input type="number" name="days" placeholder="Select the number of days" min="1">
