--- a/public/log-in.html
+++ b/public/log-in.html
@@ -21,7 +21,7 @@
         <label for="username">Username:</label><br>
         <input type="text" id="username" name="username" placeholder="Enter your username..." required><br><br>
         <label for="password">Password:</label><br>
-        <input type="text" id="password" name="password" placeholder="Enter your password..." required>
+        <input type="password" id="password" name="password" placeholder="Enter your password..." required>
         <br><br>
         <button type="submit" name="submit">LOG IN</button>
     </form>
