--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -29,6 +29,6 @@
         <button type="submit" name="submit">REGISTER</button>
     </form>
 
-    <script src="registration.js"></script>
+    <script src="sign-up.js"></script>
   </body>
 </html>
