--- a/public/log-in.html
+++ b/public/log-in.html
@@ -25,6 +25,6 @@
         <br><br>
         <button type="submit" name="submit">LOG IN</button>
     </form>
-    <script src="login.js"></script>
+    <script src="log-in.js"></script>
   </body>
 </html>
