--- a/public/log-in.html
+++ b/public/log-in.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
@@ -12,7 +12,6 @@
       <ul id="menu">
         <li><a class="active1" href="./sign-up.html">REGISTER</a></li>
         <li><a class="nonactive1" href="log-in.html">LOG IN</a></li>
-        <li><a class="nonactive1" href="./tripsPage.html">TRIPS PAGE</a></li>
       </ul>
     </nav>
     <form id="login">
@@ -25,6 +24,7 @@
         <br><br>
         <button type="submit" name="submit">LOG IN</button>
     </form>
+    <div id="error"> </div>
     <script src="log-in.js"></script>
   </body>
 </html>
