--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -30,7 +30,9 @@
           <button type="submit" name="submit">REGISTER</button>
       </form>
     </div>
-    <div id="error"> </div>
+    <div id="error">
+      <p id="error_p"></p>
+    </div>
     <script src="sign-up.js"></script>
   </body>
 </html>
