--- a/public/update.html
+++ b/public/update.html
@@ -17,7 +17,7 @@
       </ul>
     </nav>
     <div>
-        <h1>Update your trips!</h1>
+        <h1>Update your trip!</h1>
         <form id="trips">
             <label>Date</label>
             <input type="date" name="date" placeholder="Select a date">
