--- a/public/trips.html
+++ b/public/trips.html
@@ -32,9 +32,9 @@
             <label>Rating</label>
             <input type="number" name="rating" placeholder="Rating" min="1" max="10">
 
-            <button id="btn" type="submit" name="submit">Create trip!</button>
+            <button id="btn" class = "buttons" type="submit" name="submit">Create trip!</button>
         </form>
-        <button id="showTrip" type="submit" name="submit">Show trips!</button>
+        <button id="showTrip" class = "buttons" type="submit" name="submit">Show trips!</button>
     </div> <br>
     <div id="container">
       <table id="table">
