--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -19,15 +19,13 @@
     <div class="form">
       <form id="registration">
           <h1>Registration form:</h1>
-          <h2>Please enter a username and a password to make the registration!</h2><br>
-          <label for="username">Username:</label><br>
-          <input type="text" id="username" name="username" placeholder="Enter your username..." minlength="5" maxlength="12"  required><br><br>
-          <label for="password">Password:</label><br>
-          <input type="password" id="password" name="password" placeholder="Enter your password..." minlength="5" maxlength="12"  required> <!--reg ex not fixed "/^(?=.[!?.:])(?=.*\d)(?=[A-Za-z]+$)/"  pattern='/^(?=[A-Za-z0-9!?.:]+$)/' pattern="/^[ A-Za-z0-9!:.?]/" -->
-          <br>  
+          <h2>Please enter a username and a password to make the registration!</h2>
+          <label for="username">Username:</label>
+          <input type="text" id="username" name="username" placeholder="Enter your username..." minlength="5" maxlength="12"  required>
+          <label for="password">Password:</label>
+          <input type="password" id="password" name="password" placeholder="Enter your password..." minlength="5" maxlength="12"  required> <!--reg ex not fixed "/^(?=.[!?.:])(?=.*\d)(?=[A-Za-z]+$)/"  pattern='/^(?=[A-Za-z0-9!?.:]+$)/' pattern="/^[ A-Za-z0-9!:.?]/" -->  
           <p>Your password must contain <strong>at least</strong> a number and a symbol!</p>
-          <br>
-          <button type="submit" name="submit">REGISTER</button>
+          <button type="submit" class="button_submit" name="submit">REGISTER</button>
       </form>
     </div>
     <div id="error">
