--- a/public/update.html
+++ b/public/update.html
@@ -10,8 +10,8 @@
   <body>
     <nav>
       <ul id="menu">
-        <li><a class="active1" href="./sign-up.html">REGISTER</a></li>
-        <li><a class="nonactive1" href="./log-in.html">LOG IN</a></li>
+        <!-- <li><a class="active1" href="./sign-up.html">REGISTER</a></li>
+        <li><a class="nonactive1" href="./log-in.html">LOG IN</a></li> -->
         <li><a class="nonactive1" href="./trips.html">TRIPS</a></li>
         <li><button id="logout">Log out</button></li>
       </ul>
