--- a/public/log-in.html
+++ b/public/log-in.html
@@ -16,12 +16,11 @@
     </nav>
     <form id="login">
         <h1>LOG IN</h1>
-        <h2>Please enter your username and password to log in!</h2><br>
-        <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username" placeholder="Enter your username..." required><br><br>
-        <label for="password">Password:</label><br>
+        <h2>Please enter your username and password to log in!</h2>
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" placeholder="Enter your username..." required>
+        <label for="password">Password:</label>
         <input type="password" id="password" name="password" placeholder="Enter your password..." required>
-        <br><br>
         <button type="submit" name="submit">LOG IN</button>
     </form>
     <div id="error"> </div>
