--- a/public/trips.html
+++ b/public/trips.html
@@ -35,7 +35,7 @@
             <button id="btn" class = "buttons" type="submit" name="submit">Create trip!</button>
         </form>
         <button id="showTrip" class = "buttons" type="submit" name="submit">Show trips!</button>
-    </div> <br>
+    </div> 
     <div id="container">
       <table id="table">
         <tr>
