--- a/public/trips.html
+++ b/public/trips.html
@@ -17,24 +17,24 @@
       </ul>
     </nav>
     <div>
-        <h1>TRIP PAGE</h1>
+        <h1>TRIPS</h1>
         <h2>Create a trip now!</h2>
         <form id="trips">
-            <label>Date</label>
-            <input type="date" name="date" placeholder="Select a date">
+          <label>Date</label>
+          <input type="date" name="date" placeholder="Select a date">
 
-            <label>Vacation</label>
-            <input type="text" name="vacation" placeholder="Select a Vacation">
+          <label>Vacation</label>
+          <input type="text" name="vacation" placeholder="Select a Vacation">
 
-            <label>Days</label>
-            <input type="number" name="days" placeholder="Select the number of days" min="1">
+          <label>Days</label>
+          <input type="number" name="days" placeholder="Select the number of days" min="1">
 
-            <label>Rating</label>
-            <input type="number" name="rating" placeholder="Rating" min="1" max="10">
+          <label>Rating</label>
+          <input type="number" name="rating" placeholder="Rating" min="1" max="10">
 
-            <button id="btn" class = "buttons" type="submit" name="submit">Create trip!</button>
+          <button id="btn" class = "buttons" type="submit" name="submit">Create trip!</button>
         </form>
-        <button id="showTrip" class = "buttons" type="submit" name="submit">Show trips!</button>
+        <!-- <button id="showTrip" class = "buttons" type="submit" name="submit">Show trips!</button> -->
     </div> 
     <div id="container">
       <table id="table">
