--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -11,7 +11,7 @@
     <div class="menu">
       <nav>
         <ul id="menu">
-          <li><a href="/">REGISTER</a></li>
+          <li><a href="./sign-up.html">REGISTER</a></li>
           <li><a href="./log-in.html">LOG IN</a></li>
         </ul>
       </nav>
