--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -23,7 +23,7 @@
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" placeholder="Enter your username..." minlength="5" maxlength="12"  required>
         <label for="password">Password:</label>
-        <input type="password" id="password" name="password" placeholder="Enter your password..." pattern="(?=.*\d)(?=.*[!?.:]).{5,12}" title="Must contain at least one number and one special character, and 5-12 characters"> <!--reg ex not fixed "/^(?=.[!?.:])(?=.*\d)(?=[A-Za-z]+$)/"  pattern='/^(?=[A-Za-z0-9!?.:]+$)/' pattern="/^[ A-Za-z0-9!:.?]/" -->  
+        <input type="password" id="password" name="password" placeholder="Enter your password..." pattern="(?=.*\d)(?=.*[!?.:]).{5,12}" title="Must contain at least one number and one special character, and 5-12 characters"> 
         <p>Your password must contain <strong>at least</strong> a number and a symbol!</p>
         <button type="submit" class="button_submit" name="submit">REGISTER</button>
       </form>
